
2009-03-19  0:12 Ali aliov@xfce.org 
	 * : Fix a bug regarding the network manager message sleep

2009-03-18 23:29 Ali aliov@xfce.org 
	 * : Doing hibernate/suspend in a timeout function

2009-03-18 23:15 Ali aliov@xfce.org 
	 * : Fix a bug in the inhibit interface signal

2009-03-18 22:18 Ali aliov@xfce.org 
	 * : Load relevent settings depending on the form factor the power manager is running on

2009-03-18 10:46 Ali aliov@xfce.org 
	 * : Removed already deleted file from PTOFILES.in+modified string in the settings dialog

2009-03-18 10:04 Ali aliov@xfce.org 
	 * : Calculate battery percentage if this key is not present in HAL

2009-03-18  9:30 Ali aliov@xfce.org 
	 * : Check carefully if a new added device is a new battery device(hald always duplicated udi for devices)

2009-03-18  8:47 Ali aliov@xfce.org 
	 * : Added Inhibit interface+monitor ScreenSaver Inhibit messages to catch inhibition and inhibit xfpm

2009-03-17 19:54 Ali aliov@xfce.org 
	 * : Some optimization in the battery code+added GetOnBattery and on LowBattery DBus methods

2009-03-17 19:15 Ali aliov@xfce.org 
	 * : Added experimentale code to monitor hal proxy+some typos

2009-03-17 13:10 Ali aliov@xfce.org 
	 * : Fix a bug in idle timeout that was breaking gdk events

2009-03-16 23:48 Ali aliov@xfce.org 
	 * : Run as daemon by default unless no-daemon is specified

2009-03-16 23:27 Ali aliov@xfce.org 
	 * : Added freedesktop.PowerManagement power interfaces and methods

2009-03-16 19:06 Ali aliov@xfce.org 
	 * : Add a weak reference on the adapter object+remove unused signals

2009-03-16 17:36 Ali aliov@xfce.org 
	 * : Fix wrong alarm settings

2009-03-16 15:39 Ali aliov@xfce.org 
	 * : Set brightness idle level to the last user selected level+Fix a bug in SetCpuFreqGovernor that was causing a proxy disconnection

2009-03-15 13:57 Ali aliov@xfce.org 
	 * : Added some icons from gpm+Catch brightness key to avoid display flickering

2009-03-15 11:34 Ali aliov@xfce.org 