@@ -1,4 +1,7 @@
 
+2009-03-19 16:22 Ali aliov@xfce.org 
+	 * : Change the default settings loaded+change the desktop.in name
+
 2009-03-19  0:12 Ali aliov@xfce.org 
 	 * : Fix a bug regarding the network manager message sleep
 
